# freehal_main

./: README.md
hal2009/: .version  3dnetz.c  CMakeLists.txt  MANIFEST  Online Version im Disk-Modus.bat  Online Version im RAM-Modus.bat  _distrib.h  configure  extract_with_unzipper.c  genhaldebug  grammar.tab.c  grammar.tab.h  hal2009-as-debug.c  hal2009-as-release.c  hal2009-as.h  hal2009-boinc.c  hal2009-boinc.cpp  hal2009-boinc.hal  hal2009-c.h  hal2009-cgi.c  hal2009-context-reasonof.hal  hal2009-context.hal  hal2009-crash.c  hal2009-cxx.h  hal2009-database-management.hal  hal2009-defs.hal  hal2009-disk.c  hal2009-disk.h  hal2009-distrib-cgi.cpp  hal2009-distrib.c  hal2009-distrib.cpp  hal2009-download.cpp  hal2009-ipc.cpp  hal2009-ipc.h  hal2009-lang-de.hal  hal2009-lang-en.hal  hal2009-lang-indep.hal  hal2009-main.c  hal2009-main.cpp  hal2009-main.h  (+63 more)
hal2009/QA/: main.cpp  qa-c.c  temp.hal  ui_qa.h
hal2009/boost/process/: operations.hpp
hal2009/doc/: Changelog.txt  Contributors.txt  Einteilung der Spalten in pro-Dateien fuer FreeHAL 2009.xls
hal2009/doc/freehal-2010/: index.html
hal2009/freehal-db/: freehal-db.c  freehal-db.pro  freehal_db.cpp  freehal_db.h  main.cpp  moc_freehal_db.cpp
hal2009/freehal-db/scripts/: compile-for-win32.sh
hal2009/gui-qt/: Makefile  freehalqt.qrc  gui-qt.pro  online-demo.pro  qrc_freehalqt.cpp  ui_changelog.h  ui_connect.h  ui_ee.h  ui_freehal.h  ui_help.h  ui_options.h  ui_startup.h  ui_view.h
hal2009/gui-qt/scripts/: compile-for-win32.sh
hal2009/gui-qt/src/: communicate.cpp  communicate.h  defs.h  freehal-comm.h  freehal.h  jeliza-comm.h  util.cpp  wikipedia.cpp
hal2009/gui-qt/ui/: connect.ui  freehal.ui  help.ui  more-info.ui  options.ui  startup.ui
hal2009/lang_de/: Redewendungen.pro  Sprichwoerter.pro  Sprichwoerter.xml  Testanworten.pro  Testanworten.xml  beziehungen.pro  bio_chemie.pro  bio_chemie.xml  computer.pro  computer.xml  erfindungen.pro  erfindungen.xml  facts.pro  facts.pro.moved  facts.xml  freehal.pro  freehal.prot  freehal.xml  gefuehle.pro  gefuehle.xml  gemuese.pro  gemuese.xml  geografie.pro  geografie.xml  gewuerze.pro  gewuerze.xml  goetter.pro  index_of_combination.cfg  index_of_combination.cfg.moved  ist_gleich.pro  ist_gleich.xml  jeliza.pro  musik_kunst.pro  musik_kunst.xml  notizen.prot  notizen.xml  obst.pro  obst.xml  opposite.pro  perry.pro  (+33 more)
hal2009/lang_de/berufe/: Berufe.pro  Berufe.prot  Berufe.xml
hal2009/lang_de/db/: uuid
hal2009/lang_de/fakten/: fa-Nahrungsmittel.pro  fa-Nahrungsmittel.xml  fa-allgemein.pro  fa-allgemein.xml  fa-ist_gleich.pro  fa-ist_gleich.xml  fa-redewendungen.pro  fa-redewendungen.xml  fa-weise_sprueche.pro  fa-weise_sprueche.xml
hal2009/lang_de/namen/: A_Namen.pro  A_Namen.prot  A_Namen.xml  B_Namen.pro  B_Namen.prot  B_Namen.xml  C_Namen.pro  C_Namen.prot  C_Namen.xml  D_Namen.pro  D_Namen.prot  D_Namen.xml  E_Namen.pro  E_Namen.prot  E_Namen.xml  F_Namen.pro  F_Namen.prot  F_Namen.xml  G_Namen.pro  G_Namen.prot  G_Namen.xml  H_Namen.pro  H_Namen.prot  H_Namen.xml  I_Namen.pro  I_Namen.prot  I_Namen.xml  J_Namen.pro  J_Namen.prot  J_Namen.xml  K_Namen.pro  K_Namen.prot  K_Namen.xml  L_Namen.pro  L_Namen.prot  L_Namen.xml  M_Namen.pro  M_Namen.prot  M_Namen.xml  N_Namen.pro  (+28 more)
hal2009/lang_de/ps_dateien/: ps-Charaktereigenschaft.pro  ps-Charaktereigenschaft.xml  ps-Gefuehle.pro  ps-Gefuehle.xml  ps-Getreidesorte.xml  (+70 more)
hal2009/lang_en/: conceptnet-commonsense-is-2.pro  facts.pro  freehal.pro  index_of_combination.cfg  word_types.memory
hal2009/perl5/: Changes  Configure  Makefile.SH  Policy.sh  cflags  cflags.SH  config.h  config.sh  embed.fnc  extra.pods  generate_uudmap  makeaperl  makedepend  makefile  makefile.old  miniperl  myconfig  patches-applied  perl  perl.c  perl.h  perlmain.c  pp_ctl.c  util.c
hal2009/scripts/: autocompile  clean  create_manifest  fill-saved  graph-functions  onlinedemocompile  pack_linux  pack_source  update-contributors  update_contributors  update_zips  update_zips_boinc
hal2009/tests/: parser-test.hal  strong-verbs.hal  tagger-test.hal
trunk/boinc-app/: CMakeLists.txt  brain.pos  configure  hal2012-boincapp.cpp  hal2012-database2012.cpp  hal2012-database2012.h  hal2012-database2012.hpp  hal2012-diskdb2012.h  hal2012-grammar2012.cpp  hal2012-grammar2012.h  hal2012-parser2012.cpp  hal2012-parser2012.h  hal2012-phrase2012.h  hal2012-predefined2012.cpp  hal2012-revision.h  hal2012-serialization.h  hal2012-tagger2012-builtin.cpp  hal2012-util2012.cpp  hal2012-xml2012.cpp  hal2012-xml2012.h
trunk/grammar2012/: .cproject  .project  CMakeLists.txt  configure  convert-perl-cpp.pl  grammar.txt  grammar2012.cpp  graph.cpp  hal2012-database2012.h  hal2012-database2012.hpp  hal2012-diskdb2012.cpp  hal2012-diskdb2012.h  hal2012-filterfacts2012.cpp  hal2012-filterfacts2012.h  hal2012-filterfacts2012.hpp  hal2012-grammar2012.cpp  hal2012-grammar2012.h  hal2012-parser2012.cpp  hal2012-parser2012.h  hal2012-phrase2012.cpp  hal2012-phrase2012.h  hal2012-predefined2012.cpp  hal2012-predefined2012.h  hal2012-serialization.h  hal2012-tagger2012-builtin.cpp  hal2012-tagger2012.cpp  hal2012-tagger2012.h  hal2012-util2012.cpp  hal2012-util2012.h  hal2012-xml2012.cpp  hal2012-xml2012.h  hal2012-xml2012.hpp  main.cpp  memory.pos  shell.cpp  test.cpp
trunk/hal2012/: .version  CMakeLists.txt  MANIFEST  Online Version im Disk-Modus.bat  Online Version im RAM-Modus.bat  _distrib.h  gui-qt.sh  hal2012-as-debug.h  hal2012-as-release.h  hal2012-as.h  hal2012-boi.h  hal2012-boinc.c  hal2012-boinc.cpp  hal2012-boinc.h  hal2012-boinc.hal  hal2012-c.h  hal2012-cgi.c  hal2012-cgi.h  hal2012-consequence2012.cpp  hal2012-consequence2012.h  hal2012-database2012.hpp  hal2012-disk.h  hal2012-diskdb2012.cpp  hal2012-download.h  hal2012-filterfacts2012.h  hal2012-filterfacts2012.hpp  hal2012-grammar2012.cpp  hal2012-grammar2012.h  hal2012-grammar2012.hal  hal2012-i.h  hal2012-ipc.cpp  hal2012-ipc.h  hal2012-lang-de.hal  hal2012-lang-indep.hal  hal2012-main.cpp  hal2012-main.h  hal2012-mysql.h  hal2012-parser2012.cpp  hal2012-parser2012.h  hal2012-perl5.cpp  (+37 more)
(+949 files in other folders)
